Project placamia {
  database_type: "PostgreSQL"
  Note: "Current PlacamIA backend schema generated from SQLAlchemy models and Alembic migrations."
}

Table users {
  id integer [pk, increment]
  email varchar(255) [not null, unique]
  full_name varchar(255)
  role varchar(32) [not null, default: "user"]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_users_id"]
    email [unique, name: "ix_users_email"]
  }
}

Table audit_logs {
  id integer [pk, increment]
  actor_user_id integer [not null]
  action varchar(100) [not null]
  resource_type varchar(100) [not null]
  resource_id varchar(100)
  event_details json [not null]
  created_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_audit_logs_id"]
    actor_user_id [name: "ix_audit_logs_actor_user_id"]
    action [name: "ix_audit_logs_action"]
    resource_type [name: "ix_audit_logs_resource_type"]
  }
}

Ref: audit_logs.actor_user_id > users.id

Table categories {
  id integer [pk, increment]
  name varchar(255) [not null, unique]
  description text
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_categories_id"]
    name [unique, name: "ix_categories_name"]
  }
}

Table products {
  id integer [pk, increment]
  name varchar(255) [not null]
  description text
  category_id integer [not null]
  base_price numeric(10, 2) [not null]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_products_id"]
    name [name: "ix_products_name"]
    category_id [name: "ix_products_category_id"]
  }
}

Ref: products.category_id > categories.id

Table templates {
  id integer [pk, increment]
  product_id integer [not null]
  name varchar(255) [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_templates_id"]
    product_id [name: "ix_templates_product_id"]
    name [name: "ix_templates_name"]
  }
}

Ref: templates.product_id > products.id

Table template_fields {
  id integer [pk, increment]
  template_id integer [not null]
  field_name varchar(255) [not null]
  field_type varchar(100) [not null]
  is_required boolean [not null, default: false]
  allowed_values json
  display_order integer [not null, default: 0]
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_template_fields_id"]
    template_id [name: "ix_template_fields_template_id"]
    field_name [name: "ix_template_fields_field_name"]
  }
}

Ref: template_fields.template_id > templates.id

Table designs {
  id integer [pk, increment]
  customer_id integer [not null]
  template_id integer [not null]
  customization_values json [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_designs_id"]
    customer_id [name: "ix_designs_customer_id"]
    template_id [name: "ix_designs_template_id"]
  }
}

Ref: designs.customer_id > users.id
Ref: designs.template_id > templates.id

Table kits {
  id integer [pk, increment]
  name varchar(255) [not null]
  description text
  is_active boolean [not null, default: true]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_kits_id"]
    name [name: "ix_kits_name"]
  }
}

Table kit_items {
  id integer [pk, increment]
  kit_id integer [not null]
  product_id integer [not null]
  quantity integer [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_kit_items_id"]
    kit_id [name: "ix_kit_items_kit_id"]
    product_id [name: "ix_kit_items_product_id"]
  }
}

Ref: kit_items.kit_id > kits.id
Ref: kit_items.product_id > products.id

Table orders {
  id integer [pk, increment]
  customer_id integer [not null]
  status varchar(64) [not null, default: "draft"]
  cancellation_requested_from varchar(64)
  subtotal_amount numeric(12, 2) [not null]
  discount_amount numeric(12, 2) [not null, default: 0]
  tax_amount numeric(12, 2) [not null, default: 0]
  total_amount numeric(12, 2) [not null]
  currency varchar(3) [not null, default: "COP"]
  payment_provider_reference varchar(255)
  payment_verified_at timestamptz
  assigned_provider_id varchar(100)
  provider_handoff_reference varchar(255)
  provider_handoff_sent_at timestamptz
  terms_policy_version varchar(100)
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
  Check constraints:
  - ck_orders_status_supported: status is one of draft, confirmed, sent_to_provider, accepted, in_production, ready_for_pickup, shipped, delivered, cancellation_requested, cancelled
  - ck_orders_currency_iso_uppercase: currency is uppercase ISO-like 3-character code
  - ck_orders_subtotal_amount_nonnegative: subtotal_amount >= 0
  - ck_orders_discount_amount_nonnegative: discount_amount >= 0
  - ck_orders_tax_amount_nonnegative: tax_amount >= 0
  - ck_orders_total_amount_nonnegative: total_amount >= 0
  - ck_orders_cancellation_requested_from_matches_status: cancellation_requested_from is set only when status is cancellation_requested and must be confirmed, accepted, or in_production
  '''

  indexes {
    id [name: "ix_orders_id"]
    customer_id [name: "ix_orders_customer_id"]
    status [name: "ix_orders_status"]
    payment_provider_reference [name: "ix_orders_payment_provider_reference"]
    provider_handoff_reference [name: "ix_orders_provider_handoff_reference"]
  }
}

Ref: orders.customer_id > users.id

Table payments {
  id integer [pk, increment]
  order_id integer [not null]
  status varchar(32) [not null, default: "initiated"]
  amount numeric(12, 2) [not null]
  currency varchar(3) [not null]
  payment_provider_reference varchar(255)
  verified_at timestamptz
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]

  Note: '''
  Check constraints:
  - ck_payments_status_supported: status is one of initiated, pending, requires_action, verified, failed, cancelled, expired
  - ck_payments_currency_iso_uppercase: currency is uppercase ISO-like 3-character code
  - ck_payments_amount_nonnegative: amount >= 0
  Unique constraints:
  - uq_payments_order_provider_reference: one non-null provider payment reference per order
  '''

  indexes {
    id [name: "ix_payments_id"]
    order_id [name: "ix_payments_order_id"]
    status [name: "ix_payments_status"]
    payment_provider_reference [name: "ix_payments_payment_provider_reference"]
    (order_id, payment_provider_reference) [unique, name: "uq_payments_order_provider_reference"]
  }
}

Ref: payments.order_id > orders.id

Table payment_webhook_events {
  id integer [pk, increment]
  event_id varchar(255) [not null, unique]
  source varchar(64) [not null, default: "payment_provider_webhook"]
  order_id integer
  payment_id integer
  received_at timestamptz [not null, default: `now()`]

  indexes {
    id [name: "ix_payment_webhook_events_id"]
    source [name: "ix_payment_webhook_events_source"]
    order_id [name: "ix_payment_webhook_events_order_id"]
    payment_id [name: "ix_payment_webhook_events_payment_id"]
  }
}

Ref: payment_webhook_events.order_id > orders.id
Ref: payment_webhook_events.payment_id > payments.id

Table order_items {
  id integer [pk, increment]
  order_id integer [not null]
  item_type varchar(32) [not null]
  product_id integer
  kit_id integer
  template_id integer
  design_id integer
  display_name varchar(255) [not null]
  customer_safe_description text
  selected_options json [not null]
  quantity integer [not null]
  unit_price_amount numeric(12, 2) [not null]
  line_subtotal_amount numeric(12, 2) [not null]
  line_discount_amount numeric(12, 2) [not null, default: 0]
  line_tax_amount numeric(12, 2) [not null, default: 0]
  line_total_amount numeric(12, 2) [not null]
  currency varchar(3) [not null, default: "COP"]
  assigned_provider_id varchar(100) [not null]
  provider_pricing_reference varchar(255)
  provider_payload_snapshot json [not null]
  created_at timestamptz [not null, default: `now()`]

  Note: '''
  Check constraints:
  - ck_order_items_item_type_supported: item_type is one of product, kit, design
  - ck_order_items_quantity_positive: quantity > 0
  - ck_order_items_currency_iso_uppercase: currency is uppercase ISO-like 3-character code
  - ck_order_items_unit_price_amount_nonnegative: unit_price_amount >= 0
  - ck_order_items_line_subtotal_amount_nonnegative: line_subtotal_amount >= 0
  - ck_order_items_line_discount_amount_nonnegative: line_discount_amount >= 0
  - ck_order_items_line_tax_amount_nonnegative: line_tax_amount >= 0
  - ck_order_items_line_total_amount_nonnegative: line_total_amount >= 0
  '''

  indexes {
    id [name: "ix_order_items_id"]
    order_id [name: "ix_order_items_order_id"]
    item_type [name: "ix_order_items_item_type"]
    product_id [name: "ix_order_items_product_id"]
    kit_id [name: "ix_order_items_kit_id"]
    template_id [name: "ix_order_items_template_id"]
    design_id [name: "ix_order_items_design_id"]
  }
}

Ref: order_items.order_id > orders.id
Ref: order_items.product_id > products.id
Ref: order_items.kit_id > kits.id
Ref: order_items.template_id > templates.id
Ref: order_items.design_id > designs.id
